# python-intermediate-inflammation

./: .gitignore  LICENSE.md  README.md  inflammation-analysis.py  patient_class.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: kilimanjaro.yml  main.yml
day3/: comprehension.py  decorators.py  functions_as_objects.py  lambda_functions.py  patient_class.py  reducing_mapreduce.py  squares_generator.py  structuring_data.py  structuring_data_exercise.py  sum_of_squares.py
inflammation/: models.py  views.py
mountains/: kilimanjaro.yml
tests/: test_models.py
