[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = "Analyse patient inflammation data"
authors = ["Rowan <rowanmoss04@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.2"
numpy = "^1.23.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
